[FIX]overflow

--- a/AppFinancieraFront/src/app.css
+++ b/AppFinancieraFront/src/app.css
@@ -1,5 +1,5 @@
 #chatbot-body .chatbot-dialog {
-  border: 1px solid #333;
+/*   border: 1px solid #333; */
   padding: 15px;
   border-radius: 15px;
   width: 100%;
